[gd_scene load_steps=5 format=3 uid="uid://txr323ki0puc"]

[ext_resource type="Script" uid="uid://4mtmefhyfvou" path="res://UI/ConsequenceFloatingPanel/consequence_floating_panel.gd" id="1_hrjkm"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="2_rftt2"]
[ext_resource type="LabelSettings" uid="uid://d0wal13o44wsq" path="res://Scenes/TrainingProgram/parts/Cards/RoomMiniCard/SmallContentFont.tres" id="3_g5r7t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ei0u"]
bg_color = Color(0.735717, 0.247227, 0.9, 1)

[node name="ConsequenceFloatingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hrjkm")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="IconBtn" parent="Control" instance=ExtResource("2_rftt2")]
layout_mode = 0
offset_left = 111.0
offset_top = 35.0
offset_right = 136.0
offset_bottom = 60.0
icon = 28
static_color = Color(0.735717, 0.247227, 0.9, 1)
flip_h = true
is_hoverable = false
hint_icon = 28

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_right = 120.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0ei0u")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="IconBtn" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_rftt2")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = 21
is_hoverable = false

[node name="Label1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "20% chance of"
label_settings = ExtResource("3_g5r7t")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "DAMAGE"
label_settings = ExtResource("3_g5r7t")
horizontal_alignment = 1
